src/pages/About.css
.about-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  gap: 25px;
  font-size: 1.25rem;
  margin-top: 25px;
}

.about-container h3 {
  margin-bottom: 15px;
}

.lang-container {
  background-color: white;
  border: 1px solid rgba(0, 0, 0, 0.308);
  border-radius: 10px;
  padding: 10px;
  padding-bottom: 3rem;
  position: relative;
}

.credits {
  position: absolute;
  bottom: 0;
}

